PyMaker/datas/object2/RawHTML/i8601/Python_DOC_referPages.python-syntax-error-declaring-variable.txt
<div class="post-text" itemprop="text">
<p>I'm new to python. Here's my file:</p>
<p><strong>contiguous.py:</strong></p>
<pre><code>def fillArray(len, val):
    var arr = [], i
    for i = 0; i &lt; len; i++:
        arr.append(val)
    return arr
</code></pre>
<p>I try to execute:</p>
<pre><code>$ python contiguous.py
  File "contiguous.py", line 2
    var arr = [], i
          ^
SyntaxError: invalid syntax
$ python -V
Python 3.6.0
</code></pre>
<p>Why the error? What am I missing?</p>
</div>
<div class="post-text" itemprop="text">
<p>You don't have to declare a variable to use it in Python. You just instantiate. So you would want to write just <code>arr = []</code> and nothing for <code>i</code>. Furthermore, your loop syntax is incorrect. You should write <code>for i in range(len)</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>Ok, your function in Python is:</p>
<pre><code>def fillArray(len, val):
    arr = []
    for _ in range(len):
        arr.append(val)
    return arr
</code></pre>
<p>which is equivalent to:</p>
<pre><code>def fillArray(len, val):
    return [val] * len
</code></pre>
<p>Which are both dangerous if <code>val</code> is <a href="https://docs.python.org/2/reference/datamodel.html" rel="nofollow noreferrer"><code>mutable</code></a>: Python is <a href="https://stackoverflow.com/a/986145/3579910">pass by assignment</a>, so if you try to make an array of empty lists, via <code>fillArray(len, [])</code>, you will have a bad day.</p>
</div>
<div class="post-text" itemprop="text">
<p>There is no var keyword in python. Simply remove that.</p>
<p>Variables are set with:</p>
<pre><code>variable_x = []
</code></pre>
<p>Also, the way you set more than one variable per line in python is:</p>
<pre><code>variable_x, i = [], 0
</code></pre>
<p>Also, your loop looks wrong. It should be:</p>
<pre><code>for i in range(len):
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You don't need the keyword <code>var</code>. To make <code>arr</code> an array, just do:</p>
<pre><code>arr = []
</code></pre>
<p>Variables in python don't have types, only objects do. The type of a variable at any given moment is the type of the object they refer at that moment. So the line above initializes <code>arr</code> to an empty list, effectively making <code>arr</code> a list too. Also, some other considerations about your code: you are trying to fill an array with a value. There's a <strong>much</strong> easier way to do it:</p>
<pre><code>arr = [val] * len
</code></pre>
<p>In this case you don't even need to do <code>arr=[]</code>, your whole function can be replaced by the line above.</p>
</div>
<div class="post-text" itemprop="text">
<p>In python, you don't need to say <code>var</code> to assign variables as there is <strong>no</strong> variable declaration in python. You just <code>arr = []</code>. You also should not say <code>, i</code> after assigning to the variable, because <code>i</code> would be referencing a variable doesn't exist. Since you assign <code>i</code> later, you don't need to do that at all, actually. Also use <code>for i in range(len)</code>.</p>
</div>
<span class="comment-copy">Because that isn't python...</span>
<span class="comment-copy">Well, since Python doesn't have variable declarations, I would hope you are getting an error...</span>
<span class="comment-copy">Seriously, take a look at the official <a href="https://docs.python.org/3/tutorial/" rel="nofollow noreferrer">Python Tutorial</a>. It's very good, especially if you already have programming experience.</span>
<span class="comment-copy">@ChihebNexus that's a rather odd "basics" tutorial. it is out of date, too. <code>numarray</code>? Really?</span>
<span class="comment-copy">I'm voting to close this question as off-topic because SO is not a free tutoring service.</span>
<span class="comment-copy">I prefer the term "call by sharing"... because sharing is caring!</span>
<span class="comment-copy">@juanpa.arrivillaga Maybe that should become the official term. Fredrik Lundh's effbot article <a href="http://effbot.org/zone/call-by-object.htm" rel="nofollow noreferrer">call by object</a> mentions call by sharing as a synonym... ultimately that may be a better source for someone who may be confused by the topic.</span>
<span class="comment-copy">Well, it is the term used by Barbara Liskov, when she invented it for <a href="https://en.wikipedia.org/wiki/CLU_(programming_language)" rel="nofollow noreferrer">CLU</a>. But it is a rather unused term. Indeed, in Java, they just say call-by-value!  Other things introduced in that language are iterators and constructors!</span>
<span class="comment-copy">Changed declared to set. Thanks!</span>
<span class="comment-copy"><code>[val] * len</code> is usually a bad idea, especially for new programmers, because it only works if <code>val</code> is immutable.</span>
<span class="comment-copy"><b>there are no variable declarations in Python</b></span>
<span class="comment-copy">@juanpa.arrivillaga <b>that is literally what I said</b></span>
<span class="comment-copy">No, that is <i>not</i> literally what you said. You wrote you "don't need to say <code>var</code> to declare variables", and you wrote "since you declare <code>i</code> later..." both statements implying that some variable was "declared". But <b>there is no variable declaration in Python</b>. Names spring into existence when they are assigned to.</span>
<span class="comment-copy">@juanpa.arrivillaga I usually use the word declare to mean assign... I should probably brush up on my programming lingo:) I have edited my answer with the word <code>assign</code>, so please tell me if I should change anything else.</span>
